# icfp2023

./: .tool-versions  Cargo.toml  README.md  package-lock.json
problems/: problem-55.json  super-simple-1.json  super-simple-2.json  super-simple-3.json  super-simple-4.json  super-simple-5.json
solutions/: solution-1-score-unknown-strategy-trivial.json  solution-10-score-unknown-strategy-random.json  solution-10-score-unknown-strategy-trivial.json  solution-11-score-unknown-strategy-random.json  solution-11-score-unknown-strategy-trivial.json  solution-12-score-unknown-strategy-random.json  solution-12-score-unknown-strategy-trivial.json  solution-13-score-unknown-strategy-random.json  solution-13-score-unknown-strategy-trivial.json  solution-14-score-unknown-strategy-humanbrock.json  solution-14-score-unknown-strategy-random.json  solution-14-score-unknown-strategy-trivial.json  solution-15-score-unknown-strategy-random.json  solution-15-score-unknown-strategy-trivial.json  solution-16-score-unknown-strategy-random.json  solution-16-score-unknown-strategy-trivial.json  solution-17-score-unknown-strategy-random.json  solution-17-score-unknown-strategy-trivial.json  solution-18-score-unknown-strategy-random.json  solution-18-score-unknown-strategy-trivial.json  solution-19-score-unknown-strategy-random.json  solution-19-score-unknown-strategy-trivial.json  solution-2-score-unknown-strategy-trivial.json  solution-20-score-unknown-strategy-random.json  solution-20-score-unknown-strategy-trivial.json  solution-21-score-unknown-strategy-random.json  (+59 more)
src/: icfp.rs  lib.rs  (+1 more)
(+332 files in other folders)
