[package]
name = "paisleys_paradox"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "*"
ncollide2d = "*"
serde = { version = "*", features = ["derive"] }
rapier2d = "*"
rand = "*"
bevy = { version = "*" }
bevy_rapier2d = { version = "*", features = ["debug-render-2d"] }

[[bin]]
name = "solve"

[profile.dev.package.rapier2d]
opt-level = 3

